Make Metal profile optional in the CMake project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ OPTION(PROFILE_GLSL120 "Build MojoShader with support for the GLSL120 profile" O
 OPTION(PROFILE_GLSL "Build MojoShader with support for the GLSL profile" ON)
 OPTION(PROFILE_ARB1 "Build MojoShader with support for the ARB1 profile" ON)
 OPTION(PROFILE_ARB1_NV "Build MojoShader with support for the ARB1_NV profile" ON)
+OPTION(PROFILE_METAL "Build MojoShader with support for the Metal profile" ON)
 OPTION(EFFECT_SUPPORT "Build MojoShader with support for Effect framework files" ON)
 OPTION(FLIP_VIEWPORT "Build MojoShader with the ability to flip the GL viewport" OFF)
 OPTION(DEPTH_CLIPPING "Build MojoShader with the ability to simulate [0, 1] depth clipping" OFF)
@@ -94,6 +95,9 @@ IF(NOT PROFILE_ARB1)
 ENDIF(NOT PROFILE_ARB1)
 IF(NOT PROFILE_ARB1_NV)
     ADD_DEFINITIONS(-DSUPPORT_PROFILE_ARB1_NV=0)
+ENDIF(NOT PROFILE_ARB1_NV)
+IF(NOT PROFILE_METAL)
+    ADD_DEFINITIONS(-DSUPPORT_PROFILE_METAL=0)
 ENDIF(NOT PROFILE_ARB1_NV)
 
 IF(EFFECT_SUPPORT)
