Add PROFILE_GLSLES CMake option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ OPTION(BUILD_SHARED "Build MojoShader as a shared library" OFF)
 OPTION(PROFILE_D3D "Build MojoShader with support for the D3D profile" ON)
 OPTION(PROFILE_BYTECODE "Build MojoShader with support for the BYTECODE profile" ON)
 OPTION(PROFILE_GLSL120 "Build MojoShader with support for the GLSL120 profile" ON)
+OPTION(PROFILE_GLSLES "Build MojoShader with support for the GLSLES profile" ON)
 OPTION(PROFILE_GLSL "Build MojoShader with support for the GLSL profile" ON)
 OPTION(PROFILE_ARB1 "Build MojoShader with support for the ARB1 profile" ON)
 OPTION(PROFILE_ARB1_NV "Build MojoShader with support for the ARB1_NV profile" ON)
@@ -108,6 +109,9 @@ ENDIF(NOT PROFILE_BYTECODE)
 IF(NOT PROFILE_GLSL120)
     ADD_DEFINITIONS(-DSUPPORT_PROFILE_GLSL120=0)
 ENDIF(NOT PROFILE_GLSL120)
+IF(NOT PROFILE_GLSLES)
+    ADD_DEFINITIONS(-DSUPPORT_PROFILE_GLSLES=0)
+ENDIF(NOT PROFILE_GLSLES)
 IF(NOT PROFILE_GLSL)
     ADD_DEFINITIONS(-DSUPPORT_PROFILE_GLSL=0)
 ENDIF(NOT PROFILE_GLSL)
