--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ OPTION(PROFILE_ARB1 "Build MojoShader with support for the ARB1 profile" ON)
 OPTION(PROFILE_ARB1_NV "Build MojoShader with support for the ARB1_NV profile" ON)
 OPTION(PROFILE_METAL "Build MojoShader with support for the Metal profile" ON)
 OPTION(PROFILE_SPIRV "Build MojoShader with support for the SPIR-V profile" ON)
+OPTION(PROFILE_GLSPIRV "Build MojoShader with support for the ARB_gl_spirv profile" ON)
 OPTION(EFFECT_SUPPORT "Build MojoShader with support for Effect framework files" ON)
 OPTION(COMPILER_SUPPORT "Build MojoShader with support for HLSL source files" OFF)
 OPTION(FLIP_VIEWPORT "Build MojoShader with the ability to flip the GL viewport" OFF)
@@ -128,6 +129,9 @@ ENDIF(NOT PROFILE_METAL)
 IF(NOT PROFILE_SPIRV)
     ADD_DEFINITIONS(-DSUPPORT_PROFILE_SPIRV=0)
 ENDIF(NOT PROFILE_SPIRV)
+IF(NOT PROFILE_GLSPIRV)
+    ADD_DEFINITIONS(-DSUPPORT_PROFILE_GLSPIRV=0)
+ENDIF(NOT PROFILE_GLSPIRV)
 
 IF(EFFECT_SUPPORT)
     IF(UNIX)
